# fastapi-demo

./: .env.example  .gitignore  Dockerfile  README.md  alembic.ini  docker-compose.yml  pyproject.toml
alembic/: env.py
prompts/: fastapi-demo.md
src/app/: main.py
src/app/api/: dependencies.py  router.py  schemas.py
src/app/api/v1/: health.py  users.py
src/app/application/: user_service.py
src/app/core/: config.py  exceptions.py  logging.py  middleware.py  security.py
src/app/db/: base.py  session.py
src/app/domain/: base.py  uow.py
src/app/domain/user/: entity.py  repository.py
src/app/infrastructure/: uow.py
src/app/infrastructure/persistence/: user_model.py  user_repository.py
tests/: conftest.py  test_domain.py  test_users.py  test_yield_demo.py
